force-app/main/default/objects/Apttus_Config2__RelatedProduct__c/Apttus_Config2__RelatedProduct__c.object-meta.xml
<CustomObject>
    <description>Related products are for upsell, cross sell or related products (search helper)</description>
    <label>Related Product</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>