force-app/main/default/objects/Apttus_Config2__RelatedProduct__c/fields/Apttus_Config2__ProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The base product to which other products are associated.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Related Products</relationshipLabel>
    <relationshipName>RelatedProducts</relationshipName>
    <type>Lookup</type>
</CustomField>