force-app/main/default/objects/Apttus_Config2__RelatedProduct__c/fields/Apttus_Config2__Rank__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Rank__c</fullName>
    <description>Rank of the related products</description>
    <label>Rank</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>