force-app/main/default/objects/Apttus_Config2__RelatedProduct__c/fields/Apttus_Config2__RelationType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RelationType__c</fullName>
    <description>The relationship type of the related product.</description>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Up Sell</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
            <value>
                <fullName>Accessories</fullName>
            </value>
            <value>
                <fullName>Service and Support</fullName>
            </value>
            <value>
                <fullName>Compatible</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>